<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@android:color/holo_red_light"
    tools:context="com.example.shayzambrovski.digitalrecipe.MainScreen">
<ImageView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:src="@drawable/app_logo"
    android:layout_alignParentTop="true"
    android:layout_alignStart="@+id/user_name_id"
    android:id="@+id/imageView" />
    <EditText
        android:layout_width="90pt"
        android:layout_height="25pt"
        android:layout_gravity="center_vertical"
        android:hint="@string/user_name"
        android:layout_marginBottom="10pt"
        android:id="@+id/user_name_id"
        android:layout_above="@+id/password_id"
        android:layout_alignStart="@+id/password_id"
        android:gravity="center"
        android:textSize="10pt"
        android:background="@drawable/rounded_edittext"/>

    <EditText
        android:layout_width="90pt"
        android:layout_height="25pt"
        android:layout_gravity="center_vertical"
        android:hint="@string/password"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/password_id"
        android:inputType="textPassword"
        android:layout_marginBottom="10pt"
        android:gravity="center"
        android:textSize="10pt"
        android:background="@drawable/rounded_edittext"/>
    <Button
        android:layout_width="90pt"
        android:layout_height="25pt"
        android:background="@drawable/rounded_button"
        android:text="@string/log_in"
        android:id="@+id/log_in_id"
        android:layout_marginBottom="10pt"
        android:textSize="10pt"
        android:layout_below="@+id/password_id"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="90pt"
        android:layout_height="25pt"
        android:background="@drawable/rounded_button"
        android:text="@string/register"
        android:layout_below="@+id/log_in_id"
        android:layout_alignStart="@+id/log_in_id"
        android:textSize="10pt"
        android:id="@+id/register_id"/>
    <Button
        android:layout_width="45pt"
        android:layout_height="20pt"
        android:background="@drawable/rounded_button"
        android:text="@string/about"
        android:layout_alignParentBottom="true"
        android:textSize="10pt"
        android:layout_alignParentStart="true"
        android:id="@+id/about_id" />
    <Button
        android:layout_width="45pt"
        android:layout_height="20pt"
        android:background="@drawable/rounded_button"
        android:text="@string/init_data"
        android:textSize="8pt"
        android:id="@+id/init_data"
        android:layout_alignTop="@+id/about_id"
        android:layout_alignEnd="@+id/imageView" />

    <Button
        android:layout_width="45pt"
        android:layout_height="20pt"
        android:background="@drawable/rounded_button"
        android:text="@string/delete_data"
        android:textSize="8pt"
        android:id="@+id/delete_data"
        android:layout_alignTop="@+id/init_data"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
