<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@android:color/holo_red_light"
    tools:context="com.example.shayzambrovski.digitalrecipe.MainScreen">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/mainmenu_logo"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/user_name_id"
        android:id="@+id/imageView" />

    <Button
        android:layout_width="90pt"
        android:layout_height="25pt"
        android:background="@drawable/rounded_button"
        android:text="@string/create_recipe"
        android:id="@+id/new_recipe"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:textSize="10pt"
        android:layout_marginBottom="10pt"/>
    <Button
        android:layout_width="90pt"
        android:layout_height="25pt"
        android:background="@drawable/rounded_button"
        android:text="@string/see_my_recipes"
        android:id="@+id/see_my_recipe"
        android:layout_below="@+id/new_recipe"
        android:layout_alignStart="@+id/new_recipe"
        android:textSize="10pt"
        android:layout_marginBottom="10pt"/>
    <Button
        android:layout_width="90pt"
        android:layout_height="25pt"
        android:background="@drawable/rounded_button"
        android:text="@string/see_all_recipes"
        android:id="@+id/see_all_recipe"
        android:layout_below="@+id/see_my_recipe"
        android:layout_alignStart="@+id/new_recipe"
        android:textSize="10pt"
        android:layout_marginBottom="10pt"/>

    <Button
        android:layout_width="90pt"
        android:layout_height="25pt"
        android:background="@drawable/rounded_button"
        android:text="@string/see_top_rated_recipes"
        android:id="@+id/see_top_rated_recipes"
        android:layout_below="@+id/see_all_recipe"
        android:layout_alignStart="@+id/new_recipe"
        android:textSize="10pt"
        android:layout_marginBottom="10pt"/>


    <Button
        android:layout_width="45pt"
        android:layout_height="20pt"
        android:background="@drawable/rounded_button"
        android:text="@string/log_out"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/log_out" />

</RelativeLayout>
