<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@android:color/holo_red_light"
    tools:context="com.example.shayzambrovski.digitalrecipe.MainScreen">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/register_logo"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <EditText
        android:layout_width="90pt"
        android:layout_height="25pt"
        android:layout_gravity="center_vertical"
        android:hint="@string/user_name"
        android:id="@+id/user_name_id"
        android:layout_marginBottom="10pt"
        android:gravity="center"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@+id/imageView2"
        android:layout_alignStart="@+id/password_id" />

    <EditText
        android:layout_width="90pt"
        android:layout_height="25pt"
        android:layout_gravity="center_vertical"
        android:hint="@string/password"
        android:layout_marginBottom="10pt"
        android:id="@+id/password_id"
        android:inputType="textPassword"
        android:gravity="center"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@+id/user_name_id"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="90pt"
        android:layout_height="25pt"
        android:layout_gravity="center_vertical"
        android:hint="@string/email"
        android:id="@+id/email"
        android:gravity="center"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@+id/password_id"
        android:layout_marginBottom="10pt"
        android:layout_alignStart="@+id/password_id" />
    <Button
        android:layout_width="90pt"
        android:layout_height="25pt"
        android:background="@drawable/rounded_button"
        android:text="@string/register"
        android:id="@+id/register_id"
        android:layout_below="@+id/email"
        android:layout_alignStart="@+id/email" />
</RelativeLayout>
